<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37363B">

    <RelativeLayout
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:layout_centerInParent="true"
            android:src="@mipmap/gugo"
            android:layout_width="150dp"
            android:layout_height="150dp" />
    </RelativeLayout>

    <LinearLayout
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:orientation="vertical"
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/firstname_second"
            android:textColor="#ffff"
            android:background="@null"
            android:textColorHint="#9a8f85"
            android:hint="@string/firstname"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <TextView
            android:background="#9a8f85"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <EditText
            android:id="@+id/lastname_second"
            android:textColor="#ffff"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:textColorHint="#9a8f85"
            android:hint="@string/lastname"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <TextView
            android:background="#9a8f85"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <TextView
            android:layout_marginTop="10dp"
            android:textColor="#9a8f85"
            android:text="@string/email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="#ffff"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/email_second" />

        <TextView
            android:background="#9a8f85"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/password_second"
            android:textColor="#ffff"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:textColorHint="#9a8f85"
            android:hint="@string/Password"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <TextView
            android:background="#9a8f85"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <EditText
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:textColorHint="#9a8f85"
            android:hint="@string/Retypepassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/retypepassword_second" />

        <TextView
            android:background="#9a8f85"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

    <RelativeLayout
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <RadioGroup
            android:layout_marginTop="5dp"
            android:id="@+id/radio"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/male"
                android:textColor="#9a8f85"
                android:text="@string/Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_marginLeft="30dp"
                android:layout_marginRight="50dp"
                android:textColor="#9a8f85"
                android:text="@string/Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <Button
            android:layout_below="@+id/radio"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="#ffff"
            android:text="@string/signup"
            android:background="@drawable/oringer_corner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_second" />
        <LinearLayout
            android:layout_below="@+id/signup_second"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:id="@+id/text3"
            android:layout_below="@+id/button2"
            android:textColor="#9a8f85"
            android:text="Already have an account?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/button2"
            android:layout_toEndOf="@+id/text3"
            android:textColor="#6296d3"
            android:text="Login now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>