<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#37363B">

<RelativeLayout
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">
    <ImageView
        android:layout_centerInParent="true"
        android:src="@mipmap/gugo"
        android:layout_width="170dp"
        android:layout_height="170dp" />

</RelativeLayout>

    <RelativeLayout
        android:layout_weight="0.1"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text1"
            android:textColor="#9a8f85"
            android:text="@string/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/xian1"
            android:layout_below="@+id/username"
            android:background="#9a8f85"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <EditText
            android:background="@null"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:id="@+id/password"
            android:textColor="#ffff"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/Password"
            android:textColorHint="#9a8f85"
            android:layout_below="@+id/xian1"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/xian2"
            android:layout_below="@+id/password"
            android:background="#9a8f85"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <TextView
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:textColor="#9a8f85"
            android:layout_below="@+id/xian2"
            android:text="Forgot Password?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:background="@null"
            android:maxLines="1"
            android:textColor="#ffff"
            android:shadowColor="#ffff"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/text1"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <LinearLayout
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="35dp"
        android:paddingTop="20dp"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:clickable="true"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:text="@string/login"
            android:background="@drawable/bule_corner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_btn_mainactivity" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="35dp"
        android:paddingTop="20dp"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:paddingRight="12.5dp">
        <Button
            android:id="@+id/register_btn_mainactivity"
            android:clickable="true"
            android:textColor="#ffff"
            android:textSize="15sp"
            android:text="@string/register"
            android:background="@drawable/oringer_corner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:paddingLeft="12.5dp">
            <Button
                android:id="@+id/btn_map"
                android:clickable="true"
                android:textColor="#ffff"
                android:textSize="15sp"
                android:text="@string/Map"
                android:background="@drawable/oringer_corner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
